fix z-index in sections

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ position: fixed;
 top: 0;
 left: 0;
 width: 100%;
-z-index: 3;
+z-index: 5;
 }
 
 @media (max-width: 1100px) {
@@ -330,6 +330,8 @@ z-index: 3;
     margin: 0 50px 0 50px;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    position: relative;
+    z-index: 4;
     
 }
 
